# flowstock

./: .eslintrc.cjs  .gitignore  .prettierignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  components.json  flowstock.config.example.json  go.mod  go.sum  index.html  install.sh  jsconfig.json  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vite.config.js
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/cmd/flowstock/: frontend_dev.go  frontend_embed.go  main.go
backend/internal/api/: api.go  api_test.go  domain_test.go  errors.go  join.go  stock.go  (+5 more)
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  SCREENSHOTS.md  SYNC.md  TESTING.md
e2e/: catalog.spec.js  folder-sync.spec.js  global-setup.js  orders.spec.js  setup-pairing.spec.js  stock.spec.js  substrate-sync.spec.js  sync-two-node.spec.js  ui-guards.spec.js
e2e/helpers/: fixtures.js  node.js  seed.js
public/: manifest.webmanifest  robots.txt  sitemap.xml
scripts/: render-svg.mjs  screenshots.mjs
src/: app.jsx  index.css  main.jsx  routes.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  hlc.rs  lib.rs  main.rs  store.rs  sync.rs
src/components/: date-range-picker.jsx  theme-provider.jsx
src/context/: auth-context.jsx  use-auth.js  workspace-context.jsx
src/lib/: chart-theme.js  reports.js
src/pages/: home.jsx  not-found.jsx  services.jsx  settings.jsx  setup.jsx
src/services/: api.js  demo-data.js  supabaseClient.js
(+97 files in other folders)
