[package]
name = "flowstock"
version = "1.0.0"
description = "FlowStock — offline-first, multi-branch inventory management"
authors = ["Imran Paruk <imranparuk@live.com>"]
license = "MIT"
repository = "https://github.com/vul-os/flowstock"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
ulid = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"

[profile.release]
strip = true
lto = true
codegen-units = 1

[lib]
name = "flowstock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
